WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202800
MockRealtimeVideoSource::setFrameRateWithPreset should not use preset after moving it
https://bugs.webkit.org/show_bug.cgi?id=202800
Summary
MockRealtimeVideoSource::setFrameRateWithPreset should not use preset after m...
youenn fablet
Reported
2019-10-10 08:42:16 PDT
MockRealtimeVideoSource::setFrameRateWithPreset should not use preset after moving it
Attachments
Patch
(1.63 KB, patch)
2019-10-10 09:00 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-10-10 09:00:01 PDT
Created
attachment 380649
[details]
Patch
WebKit Commit Bot
Comment 2
2019-10-10 11:42:24 PDT
Comment on
attachment 380649
[details]
Patch Clearing flags on attachment: 380649 Committed
r250980
: <
https://trac.webkit.org/changeset/250980
>
WebKit Commit Bot
Comment 3
2019-10-10 11:42:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-10-10 11:43:20 PDT
<
rdar://problem/56162850
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug