MockRealtimeVideoSource::setFrameRateWithPreset should not use preset after moving it https://bugs.webkit.org/show_bug.cgi?id=202800

Reviewed by Alexey Proskuryakov.

This does not affect behavior right now since clients typically get the intrinsic size through media samples.
But this could create some inconsistencies.

* platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::setFrameRateWithPreset):


Canonical link: https://commits.webkit.org/216270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250980 268f45cc-cd09-0410-ab3c-d52691b4dbfc